DFG ValueAdd(string, int) should not fail speculation https://bugs.webkit.org/show_bug.cgi?id=71195

Reviewed by Geoff Garen.

1% speed-up on V8.

* dfg/DFGNode.h:
(JSC::DFG::Node::shouldNotSpeculateInteger):
(JSC::DFG::Node::shouldSpeculateInteger):



Canonical link: https://commits.webkit.org/87446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98832 268f45cc-cd09-0410-ab3c-d52691b4dbfc